# feishu-campus-longmemory

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_user_profiles.py
docs/: EXTRACTION_RULES_AND_DATA_FLOW.md  OpenClaw_Feishu_Integration_Docs_Links.md  PRODUCT_ROADMAP.md  STARTUP_GUIDE.md  V0_2_EVENT_INGESTION_GUIDE.md
integrations/openclaw/longmemory-context-plugin/: index.ts  openclaw.plugin.json  package.json
integrations/openclaw/longmemory-ingest/: HOOK.md  handler.ts
scripts/: p0_acceptance.ps1
src/feishu_campus_longmemory/: config.py  db.py  errors.py  logging.py  main.py  security.py  tables.py
src/feishu_campus_longmemory/api/: events.py  feishu.py  health.py  memory.py  proactive.py  profile.py  schemas.py
src/feishu_campus_longmemory/events/: normalize.py  privacy.py  store.py  types.py
src/feishu_campus_longmemory/memory/: extractor.py  reminder.py  retriever.py  store.py  types.py
src/feishu_campus_longmemory/proactive/: __init__.py  dispatcher.py  feishu.py  scheduler.py  types.py
src/feishu_campus_longmemory/profile/: __init__.py  extractor.py  renderer.py  store.py  types.py
tests/: test_config.py  test_events_api.py  test_feishu_events.py  test_health.py  test_memory_search_v0_4.py  test_memory_v0_3.py  test_migrations.py  test_p0_acceptance.py  test_proactive_v0_5.py  test_profile_v1_1.py
